--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Real Estate Plug – Your Trusted Real Estate Platform</title>
+  <title>Real Estate Plug – Your Trusted Real Estate Platform , find the best homes for sale or rent in Kenya</title>
 
   <meta name="description"
     content="Discover prime real estate listings, market insights, and expert advice at Real Estate Plug. Your go-to platform for all property needs." />
